--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="card">
                         <img src="./images/map.png" alt="">
                         <h1>Visit Office</h1>
-                        <h6>7/93, Near Vitthal Temple, Kinwat, Maharashtra</h6>
+                        <h6>7/93, Near Vitthal Temple, Nanded, Maharashtra</h6>
                     </div>
                 </div>
 
