--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </nav>
                 <div class="hero flex items-center justify-between">
                     <div class="left flex-1 flex justify-center">
-                        <img src="./images/model.png" alt="">
+                        <img src="./images/shivam.png" alt="">
                     </div>
                     <div class="right flex-1">
                         <h6>Shivam Raut</h6>
@@ -87,11 +87,11 @@
                         Corporis
                         architecto ex molestiae doloremque!</p>
                     <div class="social">
-                        <a href="#"><img src="./images/LinkedIN.png" alt=""></a>
+                        <a href="https://www.linkedin.com/in/shivam-raut-05a387180/"><img src="./images/LinkedIN.png" alt=""></a>
                         <a href="https://www.facebook.com/shivam.raut.796"><img src="./images/Facebook.png" alt=""></a>
                         <a href="#"><img src="./images/Twitter.png" alt=""></a>
-                        <a href="#"><img src="./images/Instagram.png" alt=""></a>
-                        <a href="#"><img src="./images/Mail.png" alt=""></a>
+                        <a href="https://www.instagram.com/shivraut321/"><img src="./images/Instagram.png" alt=""></a>
+                        <a href="mailto:shivamsraut2137@gmail.com"><img src="./images/Mail.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <div class="card">
                         <div class="overlay">
                             <span>Category</span>
-                            <a href="#">Web Development</a>
+                            <a href="#">Android Development</a>
                         </div>
                         <img src="./images/ph-1.png" alt="">
                     </div>
@@ -209,28 +209,28 @@
                     <div class="card">
                         <div class="overlay">
                             <span>Category</span>
-                            <a href="#">Web Development</a>
+                            <a href="#">IOS Development</a>
                         </div>
                         <img src="./images/ph-3.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Category</span>
-                            <a href="#">Web Development</a>
+                            <a href="#">Web Designing</a>
                         </div>
                         <img src="./images/ph-2.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Category</span>
-                            <a href="#">Web Development</a>
+                            <a href="#">Graphics Designing</a>
                         </div>
                         <img src="./images/ph-3.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Category</span>
-                            <a href="#">Web Development</a>
+                            <a href="#">Media Marketing</a>
                         </div>
                         <img src="./images/ph-1.png" alt="">
                     </div>
@@ -308,14 +308,14 @@
                         <h6>+91 703 896 6588</h6>
                     </div>
                     <div class="card">
-                        <img src="./images/msg.png" alt="">
+                        <a href="mailto:shivamsraut2137@gmail.com"><img src="./images/msg.png" alt=""></a>
                         <h1>Email Us At</h1>
                         <h6>shivamsraut2137@gmail.com</h6>
                     </div>
                     <div class="card">
                         <img src="./images/map.png" alt="">
                         <h1>Visit Office</h1>
-                        <h6>7/93, Near Vitthal Temple, Nanded, Maharashtra</h6>
+                        <h6>7/93, Near Vitthal Temple, Kinwat, Maharashtra</h6>
                     </div>
                 </div>
 
@@ -338,11 +338,11 @@
         <footer>
             <img class="footer-logo" src="./images/logo-2.svg" alt="">
             <div class="footer-social">
-                <a href="#"><img src="./images/LinkedINb.png" alt=""></a>
-                <a href="#"><img src="./images/Facebookb.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/shivam-raut-05a387180/"><img src="./images/LinkedINb.png" alt=""></a>
+                <a href="https://www.facebook.com/shivam.raut.796/"><img src="./images/Facebookb.png" alt=""></a>
                 <a href="#"><img src="./images/Twitterb.png" alt=""></a>
-                <a href="#"><img src="./images/Instagramb.png" alt=""></a>
-                <a href="#"><img src="./images/Mailb.png" alt=""></a>
+                <a href="https://www.instagram.com/shivraut321/"><img src="./images/Instagramb.png" alt=""></a>
+                <a href="mailto:shivamsraut2137@gmail.com"><img src="./images/Mailb.png" alt=""></a>
             </div>
             <div class="copyright">
                 Copyright 2021 © Shivam Raut. All Rights Are Reserved.
