--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                         Corporis
                         architecto ex molestiae doloremque!</p>
                     <div class="social">
-                        <a href="https://www.linkedin.com/in/shivam-raut-05a387180/"><img src="./images/LinkedIN.png" alt=""></a>
-                        <a href="https://www.facebook.com/shivam.raut.796"><img src="./images/Facebook.png" alt=""></a>
-                        <a href="#"><img src="./images/Twitter.png" alt=""></a>
-                        <a href="https://www.instagram.com/shivraut321/"><img src="./images/Instagram.png" alt=""></a>
-                        <a href="mailto:shivamsraut2137@gmail.com"><img src="./images/Mail.png" alt=""></a>
+                        <a href="https://www.linkedin.com/in/shivam-raut-05a387180/" target="_blank"><img src="./images/LinkedIN.png" alt=""></a>
+                        <a href="https://www.facebook.com/shivam.raut.796" target="_blank"><img src="./images/Facebook.png" alt=""></a>
+                        <a href="#" target="_blank"><img src="./images/Twitter.png" alt=""></a>
+                        <a href="https://www.instagram.com/shivraut321/" target="_blank"><img src="./images/Instagram.png" alt=""></a>
+                        <a href="mailto:shivamsraut2137@gmail.com" target="_blank"><img src="./images/Mail.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -338,11 +338,11 @@
         <footer>
             <img class="footer-logo" src="./images/logo-2.svg" alt="">
             <div class="footer-social">
-                <a href="https://www.linkedin.com/in/shivam-raut-05a387180/"><img src="./images/LinkedINb.png" alt=""></a>
-                <a href="https://www.facebook.com/shivam.raut.796/"><img src="./images/Facebookb.png" alt=""></a>
-                <a href="#"><img src="./images/Twitterb.png" alt=""></a>
-                <a href="https://www.instagram.com/shivraut321/"><img src="./images/Instagramb.png" alt=""></a>
-                <a href="mailto:shivamsraut2137@gmail.com"><img src="./images/Mailb.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/shivam-raut-05a387180/ " target="_blank"><img src="./images/LinkedINb.png" alt=""></a>
+                <a href="https://www.facebook.com/shivam.raut.796/" target="_blank"><img src="./images/Facebookb.png" alt=""></a>
+                <a href="#" target="_blank"><img src="./images/Twitterb.png" alt=""></a>
+                <a href="https://www.instagram.com/shivraut321/" target="_blank"><img src="./images/Instagramb.png" alt=""></a>
+                <a href="mailto:shivamsraut2137@gmail.com" target="_blank"><img src="./images/Mailb.png" alt=""></a>
             </div>
             <div class="copyright">
                 Copyright 2021 © Shivam Raut. All Rights Are Reserved.
